--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -5,6 +5,11 @@
     justify-content: space-between;
     align-content: center;
     align-items: center;
+    position: sticky;
+    top: 0;
+    z-index: 1000; /* Adjust the z-index to ensure the header stays on top of other elements */
+    width: 100%;
+    padding: 10px;
 }
 .home-link{
     font-size: 40px;
